# xmipp4-em

./: CMakeLists.txt  README.md  pyproject.toml
.github/: CODEOWNERS
.github/composites/authorize-user/: action.yml
.github/composites/install-memtool/: action.yml
.github/composites/run-ctest/: action.yml
.github/composites/show-memleaks/: action.yml
.github/workflows/: build-and-test.yml  deploy.yml  release.yml
include/xmipp4/em/geometry/: axis_3d.hpp  axis_3d.inl
include/xmipp4/em/image/: location.hpp  location.inl
include/xmipp4/em/math/: abs.hpp  abs.inl  arithmetic.hpp  arithmetic.inl  bessel.hpp  bessel.inl  bspline.hpp  bspline.inl  constants.hpp  constants.inl  erf.hpp  erf.inl  exponential.hpp  exponential.inl  factorial.hpp  factorial.inl  hyperbolic.hpp  hyperbolic.inl  math.hpp  nearest_integer.hpp  nearest_integer.inl  power.hpp  power.inl  trigonometric.hpp  trigonometric.inl
tests/: CMakeLists.txt
tests/unitary/: CMakeLists.txt
tests/unitary/src/geometry/: test_axis_3d.cpp
tests/unitary/src/image/: test_location.cpp
tests/unitary/src/math/: test_abs.cpp  test_arithmetic.cpp  test_bessel.cpp  test_bspline.cpp  test_erf.cpp  test_exponential.cpp  test_factorial.cpp  test_hyperbolic.cpp  test_nearest_integer.cpp  test_power.cpp  test_trigonometric.cpp
